--- a/index.html
+++ b/index.html
@@ -6,40 +6,68 @@
 		<style type+"text/css">
 
 		body {
-    background-color: lightblue;
-}	ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
+    background-color: white;
+ margin:0;
+}
+.container {
     overflow: hidden;
-    background-color: darkblue;
+    background-color: black;
+    font-family: Arial;
 }
 
-li {
+.container a {
     float: left;
-    border-right:1px solid #bbb;
-}
-
-li:last-child {
-    border-right: none;
-}
-
-li a {
-    display: block;
+    font-size: 16px;
     color: white;
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
 }
 
-li a:hover:not(.active) {
-    background-color: #111;
+.dropdown {
+    float: left;
+    overflow: hidden;
 }
 
-.active {
-    background-color: #4CAF50;
+.dropdown .dropbtn {
+    cursor: pointer;
+    font-size: 16px;    
+    border: none;
+    outline: none;
+    color: white;
+    padding: 14px 16px;
+    background-color: inherit;
 }
 
+.container a:hover, .dropdown:hover .dropbtn {
+    background-color: red;
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+}
+
+.dropdown-content a {
+    float: none;
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    text-align: left;
+}
+
+.dropdown-content a:hover {
+    background-color: #ddd;
+}
+
+.show {
+    display: block;
+}
 		</style>
 	</head>
 
@@ -51,21 +79,40 @@ li a:hover:not(.active) {
 	
 	
 	<body>
+	<div class="container">
+  <a href="#home">Home</a>
+  <div class="dropdown">
+    <button class="dropbtn" onclick="myFunction()">Portfolio</button>
+    <div class="dropdown-content" id="myDropdown">
+      <a href="Project 1.html">Link 1</a>
+      <a href="Project 2.html">Link 2</a>
+      <a href="Porject 3.html">Link 3</a>
+    </div>
+  </div> 
+</div>
 	
-		<ul>
- 	<li><a class="active" href="index.html">Home</a></li>
- 	<li><a href="portfolio.html">Portfolio</a></li>
-  	<li><a href="#contact">Contact</a></li>
-  	<li style="float:right"><a href="#about">About</a></li>
-	</ul>
-		
 	
 		
-<center><h1>AJ Ogrodnicks Webpage!</h1></center>
-		<center><img src="images/download.jpg" height="250"></center>
-		<h3><p>Welcome to my webpage!</p></h3>
-		
-		
+<center><h1><b>AJ Ogrodnicks Webpage!</b></h1></center>
+		<center><img src="images/splatter.png" height="250"></center>
+	
+		<script>
+/* When the user clicks on the button, 
+toggle between hiding and showing the dropdown content */
+function myFunction() {
+    document.getElementById("myDropdown").classList.toggle("show");
+}
+
+// Close the dropdown if the user clicks outside of it
+window.onclick = function(e) {
+  if (!e.target.matches('.dropbtn')) {
+    var myDropdown = document.getElementById("myDropdown");
+      if (myDropdown.classList.contains('show')) {
+        myDropdown.classList.remove('show');
+      }
+  }
+}
+</script>
 		
 	</body>
 </html>
