--- a/Project 3.html
+++ b/Project 3.html
@@ -68,6 +68,9 @@
 .show {
     display: block;
 }
+body {
+    background-image: url(images/back1.jpg);
+}
 		</style>
 	</head>
 
@@ -80,21 +83,22 @@
 	
 	<body>
 	<div class="container">
-  <a href=index.html>Home</a>
+  <a href=index.html>Dojo</a>
   <div class="dropdown">
     <button class="dropbtn" onclick="myFunction()">Portfolio</button>
     <div class="dropdown-content" id="myDropdown">
       <a href="Project 1.html">Link 1</a>
       <a href="Project 2.html">Link 2</a>
       <a href="Project 3.html">Link 3</a>
+       <a href="About.html">About Me</a>
     </div>
   </div> 
 </div>
 	
 	
 		
-<center><h1><b>Project 3</b></h1></center>
-		<center><img src="images/light.png" height="250"></center>
+<font color="red"><center><h1><b>Project 3</b></h1></center></font>
+		<center><img src="images/project.png" height="250"></center>
 	
 		<script>
 /* When the user clicks on the button, 
