--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 		<title>Home</title>
 		<style type+"text/css">
 
+
 		body {
     background-color: white;
  margin:0;
@@ -68,6 +69,10 @@
 .show {
     display: block;
 }
+body {
+    background-image: url(images/back1.jpg);
+}
+
 		</style>
 	</head>
 
@@ -80,21 +85,22 @@
 	
 	<body>
 	<div class="container">
-  <a href="#home">Home</a>
+  <a href="#home">Dojo</a>
   <div class="dropdown">
     <button class="dropbtn" onclick="myFunction()">Portfolio</button>
     <div class="dropdown-content" id="myDropdown">
       <a href="Project 1.html">Link 1</a>
       <a href="Project 2.html">Link 2</a>
       <a href="Porject 3.html">Link 3</a>
+       <a href="About.html">About Me</a>
     </div>
   </div> 
 </div>
 	
-	
+
 		
-<center><h1><b>AJ Ogrodnicks Webpage!</b></h1></center>
-		<center><img src="images/splatter.png" height="250"></center>
+
+		<center><img src="images/dojo.png" height="250"></center>
 	
 		<script>
 /* When the user clicks on the button, 
