--- a/About.html
+++ b/About.html
@@ -83,22 +83,23 @@ body {
 	
 	<body>
 	<div class="container">
-  <a href="#home">Dojo</a>
+  <a href=index.html>Dojo</a>
   <div class="dropdown">
     <button class="dropbtn" onclick="myFunction()">Portfolio</button>
     <div class="dropdown-content" id="myDropdown">
       <a href="Project 1.html">Link 1</a>
       <a href="Project 2.html">Link 2</a>
       <a href="Project 3.html">Link 3</a>
-       <a href="About.html">About Me</a>
+      <a href="About.html">About Me</a>
     </div>
   </div> 
 </div>
 	
 	
 		
-<font color="red"><center><h1><b>Project 2</b></h1></center></font>
-		<center><img src="images/project.png" height="250"></center>
+<font color="red"><center><h1><b>All About Me</b></h1></center></font>
+		<center><img src="images/AJ.jpg" height="250"></center>
+	
 	
 		<script>
 /* When the user clicks on the button, 
