--- a/About.html
+++ b/About.html
@@ -97,7 +97,8 @@ body {
 	
 	
 		
-<font color="red"><center><h1><b>All About Me</b></h1></center></font>
+<font>
+     color="red"><center><h1><b>All About Me</b></h1></center></font>
 		<center><img src="images/AJ.jpg" height="250"></center>
 	
 	
