--- a/Project 1.html
+++ b/Project 1.html
@@ -96,10 +96,21 @@ body {
 </div>
 	
 	
-		
-<font color="red"><center><h1><b>Project 1</b></h1></center></font>
-		<center><img src="images/project.png" height="250"></center>
-	
+
+
+
+<font color="red"><center><h1><b>Guess the Number!</b></h1></center></font>
+		<center><img src="question.jpg" height="250"></center>
+<font color="red"><center><p>Hello, we are the creators of the Guess the Number app on your Android device, this app wasn’t all that easy, we came across many difficulties and struggles during this project.</p><p>In this response we will be discussing our difficulties and opportunities that we ran into while constructing this app.
+A difficulty I encountered was the score on the scoreboard would overlap and become unreadable, the way I fixed this issue was I added a clear canvas block to whenever you score again.</p>		
+<p>One opportunity that I overcame was the customization of the app, such as pictures and buttons. Another opportunity was the scoreboard and the notifications and the hints that would appear randomly on the screen.
+A part of the app that I worked independently on was the scoreboard, the scoreboard would subtract a point whenever you answered incorrectly and add a point when you answer correctly. The notifications and hints would appear when the number was between either, 1-3, 4-6,7-10 and if you guess incorrectly it would tell you if it was higher or lower.</p>
+</p></center></font>
+	<center><iframe src="https://drive.google.com/file/d/0B0HMYSzwdG9gcjBUTGpOWms5SHM/preview" width="720" height="480"></iframe></center>
+	<center><iframe src="https://drive.google.com/file/d/0B0HMYSzwdG9gU2RVRjhpcG81a3M/preview" width="640" height="480"></iframe></center>
+	<center>><a href="https://drive.google.com/file/d/0B0HMYSzwdG9gWjhaLVh4cG9EdDg/view">Download GTN.aia</a></center>
+<font color="red"><center><p>Contact me</p></center>
+<font color="red"><center></font><p>anthony.ogrodnick@myds.us</center></p>
 		<script>
 /* When the user clicks on the button, 
 toggle between hiding and showing the dropdown content */
