--- a/Project 1.html
+++ b/Project 1.html
@@ -106,11 +106,17 @@ A difficulty I encountered was the score on the scoreboard would overlap and bec
 <p>One opportunity that I overcame was the customization of the app, such as pictures and buttons. Another opportunity was the scoreboard and the notifications and the hints that would appear randomly on the screen.
 A part of the app that I worked independently on was the scoreboard, the scoreboard would subtract a point whenever you answered incorrectly and add a point when you answer correctly. The notifications and hints would appear when the number was between either, 1-3, 4-6,7-10 and if you guess incorrectly it would tell you if it was higher or lower.</p>
 </p></center></font>
-	<center><iframe src="https://drive.google.com/file/d/0B0HMYSzwdG9gcjBUTGpOWms5SHM/preview" width="720" height="480"></iframe></center>
-	<center><iframe src="https://drive.google.com/file/d/0B0HMYSzwdG9gU2RVRjhpcG81a3M/preview" width="640" height="480"></iframe></center>
-	<center>><a href="https://drive.google.com/file/d/0B0HMYSzwdG9gWjhaLVh4cG9EdDg/view">Download GTN.aia</a></center>
+
+<video width="400" controls>
+  <source src="video.mp4" type="video/mp4">
+  <source src="video.ogg" type="video/ogg">
+  
+</video>
+
+	<center><a href src="GTN.apk">Download GTN.apk</a></center>
+	<center><a href="GTN.aia" >Download GTN.aia</a></center>
 <font color="red"><center><p>Contact me</p></center>
-<font color="red"><center></font><p>anthony.ogrodnick@myds.us</center></p>
+<font color="red"><center></font><p>anthony.ogrodnick@myds.us//waterpoloaj922@gmail.com</center></p>
 		<script>
 /* When the user clicks on the button, 
 toggle between hiding and showing the dropdown content */
