--- a/About.html
+++ b/About.html
@@ -90,16 +90,16 @@ body {
       <a href="Project 1.html">Link 1</a>
       <a href="Project 2.html">Link 2</a>
       <a href="Project 3.html">Link 3</a>
-      <a href="About.html">About Me</a>
+      <a href="About.html">Contact Me</a>
     </div>
   </div> 
 </div>
 	
 	
 		
-<font>
-     color="red"><center><h1><b>All About Me</b></h1></center></font>
-		<center><img src="images/AJ.jpg" height="250"></center>
+
+   <font color="red"><center><h1><b>Contact Me</b></h1></center></font>
+	<font color="red"><center>Contact me at anthony.ogrodnick@myds.us </font></center>
 	
 	
 		<script>
