--- a/Project 1.html
+++ b/Project 1.html
@@ -90,7 +90,7 @@ body {
       <a href="Project 1.html">Link 1</a>
       <a href="Project 2.html">Link 2</a>
       <a href="Project 3.html">Link 3</a>
-       <a href="About.html">About Me</a>
+       <a href="About.html">Contact Me</a>
     </div>
   </div> 
 </div>
@@ -107,16 +107,18 @@ A difficulty I encountered was the score on the scoreboard would overlap and bec
 A part of the app that I worked independently on was the scoreboard, the scoreboard would subtract a point whenever you answered incorrectly and add a point when you answer correctly. The notifications and hints would appear when the number was between either, 1-3, 4-6,7-10 and if you guess incorrectly it would tell you if it was higher or lower.</p>
 </p></center></font>
 
-<video width="400" controls>
-  <source src="video.mp4" type="video/mp4">
-  <source src="video.ogg" type="video/ogg">
-  
+<video width="320" height="240" controls>
+ <source src="/android/gtnvideo.mp4" type="video/mp4">
+ <source src="/android/gtnvideo.mp4" type="video/ogg">
+  Your browser does not support the video tag.
 </video>
 
-	<center><a href src="GTN.apk">Download GTN.apk</a></center>
-	<center><a href="GTN.aia" >Download GTN.aia</a></center>
+	<center><a href="/android/GTN.apk">Download GTN.apk</a></center>
+	<center><a href="/android/GTN.aia">Download GTN.aia</a></a></center>
 <font color="red"><center><p>Contact me</p></center>
+<font color="red"><center><p>AJ Ogrodnick</p></center>
 <font color="red"><center></font><p>anthony.ogrodnick@myds.us//waterpoloaj922@gmail.com</center></p>
+
 		<script>
 /* When the user clicks on the button, 
 toggle between hiding and showing the dropdown content */
