--- a/Project 3.html
+++ b/Project 3.html
@@ -90,7 +90,7 @@ body {
       <a href="Project 1.html">Link 1</a>
       <a href="Project 2.html">Link 2</a>
       <a href="Project 3.html">Link 3</a>
-       <a href="About.html">About Me</a>
+       <a href="About.html">Contact Me</a>
     </div>
   </div> 
 </div>
