--- a/Project 1.html
+++ b/Project 1.html
@@ -107,7 +107,7 @@ A difficulty I encountered was the score on the scoreboard would overlap and bec
 A part of the app that I worked independently on was the scoreboard, the scoreboard would subtract a point whenever you answered incorrectly and add a point when you answer correctly. The notifications and hints would appear when the number was between either, 1-3, 4-6,7-10 and if you guess incorrectly it would tell you if it was higher or lower.</p>
 </p></center></font>
 
-<video width="320" height="240" controls>
+<center><video width="320" height="240" controls></center>
  <source src="/android/gtnvideo.mp4" type="video/mp4">
  <source src="/android/gtnvideo.mp4" type="video/ogg">
   Your browser does not support the video tag.
