--- a/About.html
+++ b/About.html
@@ -72,6 +72,11 @@ body {
     background-image: url(images/back1.jpg);
 }
 		</style>
+		<meta charset="UTF-8">
+  <meta name="description" content="About Me">
+  <meta name="keywords" content="HTML,CSS,XML,JavaScript">
+  <meta name="author" content="John Doe">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	</head>
 
 
@@ -87,21 +92,23 @@ body {
   <div class="dropdown">
     <button class="dropbtn" onclick="myFunction()">Portfolio</button>
     <div class="dropdown-content" id="myDropdown">
-      <a href="Project 1.html">Link 1</a>
-      <a href="Project 2.html">Link 2</a>
-      <a href="Project 3.html">Link 3</a>
-      <a href="About.html">Contact Me</a>
+      <a href="Project 1.html">Android Project</a>
+      <a href="Project 2.html">Interactive Fiction Project</a>
+      <a href="Project 3.html">*Coming Soon*</a>
+      <a href="About.html">About Me</a>
     </div>
   </div> 
 </div>
 	
-	
-		
+	 <font color="red"><center><h1><b>About Me</b></h1></center></font>
 
-   <font color="red"><center><h1><b>Contact Me</b></h1></center></font>
-	<font color="red"><center>Contact me at anthony.ogrodnick@myds.us </font></center>
-	
-	
+<center><img src="images/AJ.jpg" height="250"></center>
+	<font color="red"><center><p>Hello my name is AJ Ogrodnick!</p></center></font>
+	<font color="red"><center><p>I have little knowledge on coding, but hope to continue to get better and strive.</p></center></font>
+	<font color="red"><center><p>I Love computers, and I always have, but I really want to get more into coding and hopefully work on video games.</p></center></font>
+
+		
+		
 		<script>
 /* When the user clicks on the button, 
 toggle between hiding and showing the dropdown content */
