--- a/Project 2.html
+++ b/Project 2.html
@@ -87,19 +87,27 @@ body {
   <div class="dropdown">
     <button class="dropbtn" onclick="myFunction()">Portfolio</button>
     <div class="dropdown-content" id="myDropdown">
-      <a href="Project 1.html">Link 1</a>
-      <a href="Project 2.html">Link 2</a>
-      <a href="Project 3.html">Link 3</a>
-       <a href="About.html">Contact Me</a>
+      <a href="Project 1.html">Android Project</a>
+      <a href="Project 2.html">Interactive Fiction Project</a>
+      <a href="Project 3.html">*Coming Soon*</a>
+       <a href="About.html">About Me</a>
     </div>
   </div> 
 </div>
 	
 	
 		
-<font color="red"><center><h1><b>Project 2</b></h1></center></font>
-		<center><img src="images/project.png" height="250"></center>
-	
+<font color="red"><center><h1><b>Interactive Fiction Project</b></h1></center></font>
+<font color="red"><center><p>You're Conrad Jason, you live in a Utopia society, but you make some descions that lead to you getting thrown in an insane asylem for years, when something bad happnes outside, good luck on your story!</p>
+<font color="red"><center><h1><b>Flow Chart:</b></h1></center></font>
+<center><script type="text/javascript" language="javascript" src="https://app.creately.com/player/creately-player.js"></script></center>
+<center><div id="creately-container-ja1dz4is1"></div></center>
+<center><script type="text/javascript">
+
+var player = new CreatelyPlayer( "creately-container-ja1dz4is1", "ja1dz4is1-5uUkmohzORROgFOdSHCiDEoayQ=", { width: "500px", height: "500px" });
+</script></center>
+<iframe height="400px" width="100%" src="https://repl.it/@ajogrodnick1/Interactive-Fiction-10?lite=true" scrolling="no" frameborder="no" allowtransparency="true" allowfullscreen="true" sandbox="allow-forms allow-pointer-lock allow-popups allow-same-origin allow-scripts allow-modals"></iframe>
+		
 		<script>
 /* When the user clicks on the button, 
 toggle between hiding and showing the dropdown content */
