--- a/Project 3.html
+++ b/Project 3.html
@@ -87,9 +87,9 @@ body {
   <div class="dropdown">
     <button class="dropbtn" onclick="myFunction()">Portfolio</button>
     <div class="dropdown-content" id="myDropdown">
-      <a href="Project 1.html">Link 1</a>
-      <a href="Project 2.html">Link 2</a>
-      <a href="Project 3.html">Link 3</a>
+      <a href="Project 1.html">Android Project</a>
+      <a href="Project 2.html">Interactive Fiction Project</a>
+      <a href="Project 3.html">*Coming Soon*</a>
        <a href="About.html">Contact Me</a>
     </div>
   </div> 
