--- a/Project 3.html
+++ b/Project 3.html
@@ -89,7 +89,7 @@ body {
     <div class="dropdown-content" id="myDropdown">
       <a href="Project 1.html">Android Project</a>
       <a href="Project 2.html">Interactive Fiction Project</a>
-      <a href="Project 3.html">*Coming Soon*</a>
+      <a href="Project 3.html">The Game of NIM</a>
        <a href="About.html">Contact Me</a>
     </div>
   </div> 
@@ -97,9 +97,13 @@ body {
 	
 	
 		
-<font color="red"><center><h1><b>Project 3</b></h1></center></font>
-		<center><img src="images/project.png" height="250"></center>
-	
+<font color="red"><center><h1><b>The Game of NIM</b></h1></center></font>
+		<center><img src="images/NIMM.PNG" height="250"></center><center><img src="images/Capture.PNG" height="250"></center>
+	<p><center><font color="red">Over the course of this project my partner and I came across many difficulties, but one of the main difficulties I encountered was creating the how to play text and the information text. My partner already started a basic setup for the code, so I had to follow and look around in the code for the right spot. Another problem that occured was when I typed the text into the spot, nothing was centering when pressing tab manually, I overcame this by highlighting the whole text then pressing tab.
+</font></center></p>
+
+<iframe height="400px" width="100%" src="https://repl.it/@ajogrodnick1/The-Game-of-NIM?lite=true" scrolling="no" frameborder="no" allowtransparency="true" allowfullscreen="true" sandbox="allow-forms allow-pointer-lock allow-popups allow-same-origin allow-scripts allow-modals"></iframe>
+
 		<script>
 /* When the user clicks on the button, 
 toggle between hiding and showing the dropdown content */
