--- a/Project 2.html
+++ b/Project 2.html
@@ -89,7 +89,7 @@ body {
     <div class="dropdown-content" id="myDropdown">
       <a href="Project 1.html">Android Project</a>
       <a href="Project 2.html">Interactive Fiction Project</a>
-      <a href="Project 3.html">*Coming Soon*</a>
+      <a href="Project 3.html">The Game of NIM</a>
        <a href="About.html">About Me</a>
     </div>
   </div> 
