--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@ body {
     <div class="dropdown-content" id="myDropdown">
       <a href="Project 1.html">Android Project</a>
       <a href="Project 2.html">Interactive Fiction Project</a>
-      <a href="Porject 3.html">*Coming Soon*</a>
+      <a href="Porject 3.html">The Game of NIM</a>
        <a href="About.html">About Me</a>
     </div>
   </div> 
