--- a/Project 2.html
+++ b/Project 2.html
@@ -90,6 +90,7 @@ body {
       <a href="Project 1.html">Android Project</a>
       <a href="Project 2.html">Interactive Fiction Project</a>
       <a href="Project 3.html">The Game of NIM</a>
+      <a href="Project 4.html">Secert Messages</a>
        <a href="About.html">About Me</a>
     </div>
   </div> 
