--- a/Project 4.html
+++ b/Project 4.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8">
-		<title>Project 1</title>
+		<title>Home</title>
 		<style type+"text/css">
 
 		body {
@@ -83,13 +83,13 @@ body {
 	
 	<body>
 	<div class="container">
-  <a href="index.html">Dojo</a>
+  <a href=index.html>Dojo</a>
   <div class="dropdown">
     <button class="dropbtn" onclick="myFunction()">Portfolio</button>
     <div class="dropdown-content" id="myDropdown">
       <a href="Project 1.html">Android Project</a>
       <a href="Project 2.html">Interactive Fiction Project</a>
-      <a href="Project 3.html">The Game of NIM</a>
+      <a href="Project 3.html">The Game of NIM</a
       <a href="Project 4.html">Secert Messages</a>
        <a href="About.html">Contact Me</a>
     </div>
@@ -97,28 +97,14 @@ body {
 </div>
 	
 	
-
-
-
-<font color="red"><center><h1><b>Guess the Number!</b></h1></center></font>
-		<center><img src="question.jpg" height="250"></center>
-<font color="red"><center><p>Hello, we are the creators of the Guess the Number app on your Android device, this app wasn’t all that easy, we came across many difficulties and struggles during this project.</p><p>In this response we will be discussing our difficulties and opportunities that we ran into while constructing this app.
-A difficulty I encountered was the score on the scoreboard would overlap and become unreadable, the way I fixed this issue was I added a clear canvas block to whenever you score again.</p>		
-<p>One opportunity that I overcame was the customization of the app, such as pictures and buttons. Another opportunity was the scoreboard and the notifications and the hints that would appear randomly on the screen.
-A part of the app that I worked independently on was the scoreboard, the scoreboard would subtract a point whenever you answered incorrectly and add a point when you answer correctly. The notifications and hints would appear when the number was between either, 1-3, 4-6,7-10 and if you guess incorrectly it would tell you if it was higher or lower.</p>
-</p></center></font>
-
-<video width="320" height="240" controls>
- <source src="/android/gtnvideo.mp4" type="video/mp4">
- <source src="/android/gtnvideo.mp4" type="video/ogg">
- 
+		
+<font color="red"><center><h1><b>Secert Messages</b></h1></center></font>
+<center><img src="images/Secert.PNG" height="250"></center><center><img src="images/Secert.PNG" height="250"></center>
+<video width="320" height="240"	controls>
+<center><source src="/Videos/recording for rsa message DL.mp4" type="video/mp4"></center>
+    <source src="movie.ogg" type="video/ogg">
 </video>
 
-	<center><a href="/android/GTN.apk">Download GTN.apk</a></center>
-	<center><a href="/android/GTN.aia">Download GTN.aia</a></a></center>
-<font color="red"><center><p>Contact me</p></center>
-<font color="red"><center><p>AJ Ogrodnick</p></center>
-<font color="red"><center></font><p>anthony.ogrodnick@myds.us//waterpoloaj922@gmail.com</center></p>
 
 		<script>
 /* When the user clicks on the button, 
