--- a/Project 4.html
+++ b/Project 4.html
@@ -99,13 +99,17 @@ body {
 	
 		
 <font color="red"><center><h1><b>Secert Messages</b></h1></center></font>
-<center><img src="images/Secert.PNG" height="250"></center><center><img src="images/Secert.PNG" height="250"></center>
+<font color="red"><center><p>During this project we had many issues, my partner and I had a great time with this project and in the end were successful in creating the code.One of the problems that we encountered was our math and private key and public key. When you typed in the message that you would like to decrypt, the code would spit out random letters and symbols and not decrypt the code. After asking many student and the teacher we couldn’t find what was wrong because the code wasn’t broken at all, then we tried restarting our math for our public and private key and the code finally worked.
+</p></center></font>
+<center><img src="images/Secert.PNG" height="250"></center>
+<font color="red"><center><p>One of the problems I encountered was using and inputting the while loop in the code, when the code asks you to enter your E and N value for encrypting, the code would repeat forever after entering your values. I soon moved the while loop up so after your messages gets encrypted or decrypted, it repeats automatically not making the user have to run the code again and again. This project was very fun, sending messages to other classmates and decrypting the messages that they sent you. It was also very interesting to learn about encrypted messages and people decrypting them.
+</p></center></font>
+<center><img src="images/code.jpg" height="250"></center>
 <video width="320" height="240"	controls>
-<center><source src="/Videos/recording for rsa message DL.mp4" type="video/mp4"></center>
-    <source src="movie.ogg" type="video/ogg">
+<source src="/images/video.mp4" type="video/mp4">
 </video>
 
-
+<center><a href="/rsa/RSA-message-final.zip">Download RSA-message-final.zip</a></center>
 		<script>
 /* When the user clicks on the button, 
 toggle between hiding and showing the dropdown content */
