Final push ever :(

--- a/Project 1.html
+++ b/Project 1.html
@@ -91,6 +91,7 @@ body {
       <a href="Project 2.html">Interactive Fiction Project</a>
       <a href="Project 3.html">The Game of NIM</a>
       <a href="Project 4.html">Secert Messages</a>
+       <a href="Project 5.html">JAVA GUI</a>
        <a href="About.html">Contact Me</a>
     </div>
   </div> 
