--- a/Project 5.html
+++ b/Project 5.html
@@ -5,7 +5,6 @@
 		<title>Home</title>
 		<style type+"text/css">
 
-
 		body {
     background-color: white;
  margin:0;
@@ -72,7 +71,6 @@
 body {
     background-image: url(images/back1.jpg);
 }
-
 		</style>
 	</head>
 
@@ -83,27 +81,43 @@ body {
 	
 	
 	
-	<body>
+	<
+	
+	>
 	<div class="container">
-  <a href="#home">Dojo</a>
+  <a href=index.html>Dojo</a>
   <div class="dropdown">
     <button class="dropbtn" onclick="myFunction()">Portfolio</button>
     <div class="dropdown-content" id="myDropdown">
       <a href="Project 1.html">Android Project</a>
       <a href="Project 2.html">Interactive Fiction Project</a>
-      <a href="Porject 3.html">The Game of NIM</a>
+      <a href="Project 3.html">The Game of NIM</a>
       <a href="Project 4.html">Secert Messages</a>
-       <a href="Project 5.html">JAVA GUI</a>
-       <a href="About.html">About Me</a>
+        <a href="Project 5.html">JAVA GUI</a>
+       <a href="About.html">Contact Me</a>
     </div>
   </div> 
 </div>
 	
-
-		
-
-		<center><img src="images/dojo.png" height="250"></center>
 	
+		
+<font color="red"><center><h1><b>JAVA GUI ALARM CLOCK</b></h1></center></font>
+		<center><img src="images/java.png" height="250"></center><center><img src="images/" height="250"></center>
+	<p><center><font color="red">During this project I gained much experience with Java, but my partner and I faced many problems with the code, at first we were going to create a quiz, then we switched to a money converter, but the code was just way to complicated. We then decided on creating an alarm clock, one problem that we faced together was trying to get the second screen to pop up to set your alarm clock, we fixed this issue by asking our classmates and Mr.Landfried, they gave us hints and we eventually figured it out.
+</font></center></p>
+
+<center><img src="images/JavaGUIAbstraction.png" height="250"></center><center><img src="images/" height="250"></center>
+<center><img src="images/JavaGUIAlgorithm.png" height="250"></center><center><img src="images/" height="250"></center>
+
+
+<center><video width="320" height="240" controls>
+ <source src="/Videos/yes.mp4" type="video/mp4">
+ <source src="/Videos/yes.mp4" type="video/ogg">
+ 
+</video></center>
+
+<center><a href="https://github.com/edwin-ledezma/JavaGUI">Github Repository</a></center>
+
 		<script>
 /* When the user clicks on the button, 
 toggle between hiding and showing the dropdown content */
